--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
-1.1-0
+1.1-1 (10/9/2013)
+-----
+A few unit tests.
+
+Minor polishing.
+
+1.1-0 (10/2/2013)
 -----
 New indicators: Mean childbearing age, mean annual pop. growth
 
