--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+1.4-0
+-----
+Updated to shiny 0.10.0.
+
+Removed "Data" tab.
+
+"Sortable Data" switched to renderDataTable.
+
+A few minor aesthetic changes.
+
 1.3-0 (8/8/2013)
 -----
 Can display aggregations (added to wpp2012).
