--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-1.4-0
+1.4-0 (8/21/2014)
 -----
 Updated to shiny 0.10.0.
 
@@ -6,9 +6,13 @@ Removed "Data" tab.
 
 "Sortable Data" switched to renderDataTable.
 
+Uncertainty can be selected as multiple choice.
+
 A few minor aesthetic changes.
 
-1.3-0 (8/8/2013)
+Added info about data source.
+
+1.3-0 (8/8/2014)
 -----
 Can display aggregations (added to wpp2012).
 
