--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+1.9-0
+-----
+Added shinyjs to Imports. Used for disable/enable & show/hide widgets.
+
+Uncertainty selection values made dependent on which indicator is chosen.
+ 
+For trends - when log scale selected, show also the uncertainty.
+
 1.8-1 (4/22/2016)
 -----
 Fixed bug in obtaining age-specific fertility rate.
