--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
+2.3-1 (10/04/2019)
+-----
+Dependency changed to CRAN's wpp2019.
+
 2.3-0 (6/17/2019)
 -----
-Default set to wpp2019.
+Default set to wpp2019. Depends on Github's wpp2019.
 
 2.2-0 (2/08/2018)
 -----
