--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2.3-3 (12/19/2019)
+-----
+URL of the online app changed.
+
+Added Methodology credentials.
+
 2.3-2 (10/04/2019)
 -----
 LICENSE file added.
