fixed net migration rate indicator

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2.3-5 (7/17/2020)
+-----
+Fixed the net migration rate indicator.
+
 2.3-4 (4/7/2020)
 -----
 Download link added to the Table tab (suggested by Kirus Magnus).
