--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
-2.4-0 (7/11/2020)
+2.5-0 (7/11/2024)
+-----
+Support for the 2024 revision. Dependency on GitHub version of wpp2024. 
+
+2.4-0 (7/11/2022)
 -----
 Support for the 2022 revision. Dependency on GitHub version of wpp2022. 
 
