--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+3.0-1 (2/26/2025)
+-----
+Fix in legend of trend plots.
+
 3.0-0 (7/11/2024)
 -----
 Support for the 2024 revision. Dependency on GitHub version of wpp2024. 
